# trader

./: .dockerignore  .env.template  Dockerfile  Makefile  README.md  pyproject.toml
.do/: app.yaml
.github/workflows/: python-app.yml
docs/: DESIGN.md  PLAN.md
docs/knowledges/: research-gpt-20260626.md
docs/reviews/: review-20260624.md  review-20260702.md
src/trader/agent/app/: main.py  schemas.py
src/trader/agent/core/: agent.py  prompts.py  tools.py
src/trader/app/: formatting.py  main.py  schemas.py
src/trader/bot/: main.py
src/trader/common/: config.py
src/trader/core/: bootstrap.py  prompts.py
src/trader/core/agents/: base.py  builtin.py  react.py
src/trader/core/clients/: __init__.py
src/trader/core/components/: structured.py
src/trader/core/models/: domain.py  protocols.py  schemas.py  streaming.py
src/trader/core/skills/: __init__.py  analyze.py  base.py  find.py
src/trader/core/tools/: __init__.py  calc.py  schemas.py
src/trader/ui/telegram/: main.py
tests/: test_tools.py
tests/eval/: cases.py  cli.py  evaluators.py  runner.py
tests/eval/backends/: langsmith.py
tests/eval/datasets/analyze/: cases.yaml  rubric.md
tests/eval/datasets/find/: cases.yaml  rubric.md
tests/eval/datasets/normal/: cases.yaml  rubric.md
tests/llm/: conftest.py  test_basic.py  test_skills.py  test_tool_calls.py
tests/unit/: test_bootstrap.py  test_calc.py  test_clob_client.py  test_clob_client_live.py  test_eval_trajectory.py  test_formatting.py  test_responder_passthrough.py  test_responder_recover.py  test_streaming.py  test_tools.py
(+15 files in other folders)
