[project]
name = "trader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.29.0",
    "fastapi>=0.138.0",
    "httpx>=0.28.1",
    "langchain-openai>=1.3.2",
    "langgraph>=1.2.6",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "tavily-python>=0.7.26",
    "telegramify-markdown>=1.2.0",
    "uvicorn>=0.49.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trader"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Default run is offline & free: exclude network/LLM smoke tests.
addopts = "-m 'not live and not llm'"
markers = [
    "live: hits external network APIs",
    "llm: makes real LLM calls (costs money, needs OPENAI_API_KEY)",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "pyyaml>=6.0",
]
